# old-audiosync

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  benchmark.sh  compile_commands.json  example.py  getaudio.sh  main  setup.py  sketch.py  test_module.py
.github/workflows/: ci.yaml  release.yaml
apps/: CMakeLists.txt  main.c  main.py
apps/images/: .gitignore
audio/: song.txt
cmake/: FindFFTW.cmake  FindPulseAudio.cmake
dev/: audiosync_sketch.py  benchmark.py  getaudio.sh  pulseaudio_move_sketch.bash  pulseaudio_setup_sketch.bash  pulseaudio_setup_sketch.c  run-tests-docker.sh
examples/: Makefile  example.c
examples/images/: .gitignore
include/audiosync/: audiosync.h  cross_correlation.h  ffmpeg_pipe.h
include/audiosync/capture/: linux_capture.h
include/audiosync/download/: linux_download.h
include/vidify_audiosync/: audiosync.h  cross_correlation.h  ffmpeg_pipe.h  global.h
include/vidify_audiosync/capture/: linux_capture.h
include/vidify_audiosync/download/: linux_download.h
src/: CMakeLists.txt  audiosync.c  audiosync.h  bind.c  cross_correlation.c  cross_correlation.h  download.c  download.h  ffmpeg_pipe.c  ffmpeg_pipe.h  global.h  main.c  main.cpp
src/capture/: linux_capture.c  linux_capture.h  windows_capture.h
src/capture_audio/: linux_capture.c  linux_capture.h  main.c  windows_capture.c  windows_capture.h
src/download/: linux_download.c  linux_download.h
tests/: CMakeLists.txt  Makefile  test_bindings.py  test_cross_correlation.c  test_pearson_coefficient.c  test_pulseaudio_setup.c  test_pulseaudio_setup_wrapper.sh  tests.c
